# coala-language

./: Dockerfile  README  README.md  Readme.md  ast.ml  dune-project  example.mc  example.out  nanocparse.mly  scanner.mll  test.ml
coala/: dune-project  main.ml
coala/_build/: .db  .digest-db  log
coala/_build/default/: coala.dune-package  coala.install
coala/lib/: ast.ml  coalaparse.mly  coalaparse.output  codegen.ml  dune  lli  main.ml  main.native  sast.ml  scanner.mll  semant.ml  test.mc  test.ml  test.native  test.out
coala/lib/_build/: _digests  _log  ast.cmi  ast.cmo  ast.cmx  ast.ml  coalaparse.cmi  coalaparse.cmx  coalaparse.ml  coalaparse.ml.depends  coalaparse.mli  coalaparse.mli.depends  coalaparse.mly  codegen.cmi  codegen.cmo  codegen.cmx  codegen.ml  main.cmi  main.cmo  main.cmx  main.ml  main.ml.depends  main.native  ocamlc.where  sast.cmi  sast.cmo  sast.cmx  sast.ml  scanner.cmi  scanner.cmo  scanner.cmx  scanner.ml  scanner.ml.depends  scanner.mll  semant.cmi  semant.cmo  semant.cmx  semant.ml  test.cmi  test.cmo  (+3 more)
coala/test/: dune  example.mc  example.out  testall.sh
coala/test/demo/: array.mc  array.out  control.mc  control.out  data_types.mc  data_types.out  declare.mc  declare.out  operations.mc  operations.out
coala/test/tests/: fail-1.err  fail-assign-declare.err  fail-assign-declare.mc  fail-assign.mc  fail-assign2.err  fail-assign2.mc  fail-func2.mc  fail-func3.mc  fail-noreturn.err  fail-noreturn.mc  fail-print.err  fail-print.mc  fail-print2.err  fail-print2.mc  fail-return-wrong.err  test-1.mc  (+32 more)
lib/: dune
test/: testall.sh
(+55 files in other folders)
